--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  provider: ^5.0.0
 
 flutter:
   uses-material-design: true
-
-assets:
+  assets:
+    - lib/assets/be_fit_logo.png
