--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   provider: ^5.0.0
+  carousel_slider: ^5.0.0
 
 flutter:
   uses-material-design: true
   assets:
-    - lib/assets/be_fit_logo.png
+    - lib/assets/
+    - lib/assets/exercises/
