--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   provider: ^5.0.0
   carousel_slider: ^5.0.0
+  intl: ^0.18.1
 
 flutter:
   uses-material-design: true
